# rust-api-code

./: .gitignore  LICENSE  README.md
02-hello-world/hello-world/hello_main/src/: main.rs
03-application-structure/application-configuration/cli_application/: Cargo.toml
03-application-structure/application-configuration/cli_application/src/: main.rs  settings.rs
03-application-structure/application-structure/cli_application/: Cargo.toml
04-tokio-hyper-axum/domain-model/cli_application/: Cargo.toml
04-tokio-hyper-axum/domain-model/cli_application/src/: main.rs  model.rs
04-tokio-hyper-axum/login/cli_application/src/: settings.rs
04-tokio-hyper-axum/web-application/: .gitignore
04-tokio-hyper-axum/web-application/cli_application/: Cargo.toml
05-persistence/sqlite/cli_app/src/: main.rs
05-persistence/sqlite/cli_app/src/api/: mod.rs  v1.rs
05-persistence/sqlx/: schema.sql
05-persistence/sqlx/cli_app/: Cargo.toml
05-persistence/sqlx/cli_app/src/: model.rs
05-persistence/sqlx/cli_app/src/api/handlers/: login.rs
05-persistence/sqlx/cli_app/src/api/response/: posts.rs
05-persistence/sqlx/cli_app/src/commands/: serve.rs
05-persistence/sqlx/cli_app/src/services/: user.rs
api-design/jsonschema/: Cargo.toml
api-design/jsonschema/src/: main.rs
api-design/openapi/cli_app/: Cargo.toml
api-design/openapi/cli_app/src/: lib.rs  model.rs
api-design/openapi/cli_app/src/api/: mod.rs  v1.rs
api-design/openapi/cli_app/src/api/handlers/: hello.rs  login.rs  mod.rs  posts.rs
api-design/openapi/cli_app/src/api/response/: login.rs
application-structure/application-configuration/cli_app/: Cargo.toml
application-structure/application-structure/: Cargo.toml
application-structure/application-structure/cli_app/: Cargo.toml
application-structure/application-structure/cli_app/src/: main.rs
application-structure/application-structure/cli_application/src/: main.rs
hello-world/error-handling/hello_main/: Cargo.toml
hello-world/error-handling/hello_main/src/: main.rs
hello-world/hello-world/: Cargo.toml
hello-world/hello-world/hello_main/: Cargo.toml
hello-world/hello-world/hello_main/src/: main.rs
observability/opentelemetry/cli_app/: Cargo.toml
observability/opentelemetry/cli_app/src/: settings.rs  state.rs
persistence/sqlx/: docker-compose.yml
persistence/sqlx/cli_app/: Cargo.toml
persistence/sqlx/cli_app/src/: model.rs
tokio-hyper-axum/domain-model/: Cargo.toml
tokio-hyper-axum/domain-model/cli_app/: Cargo.toml
tokio-hyper-axum/domain-model/cli_app/src/: settings.rs
tokio-hyper-axum/domain-model/cli_application/: Cargo.toml
tokio-hyper-axum/domain-model/cli_application/src/: state.rs
tokio-hyper-axum/login/cli_app/: Cargo.toml
tokio-hyper-axum/login/cli_app/src/: model.rs
tokio-hyper-axum/login/cli_application/: Cargo.toml
tokio-hyper-axum/web-application/cli_app/: Cargo.toml
tokio-hyper-axum/web-application/cli_application/: Cargo.toml
(+45 files in other folders)
